force-app/main/default/objects/CustomerMeetingReport__c/CustomerMeetingReport__c.object-meta.xml
<CustomObject>
    <label>Customer Meeting Report</label>
    <nameField>
        <label>Customer Meeting Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Meeting Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>