force-app/main/default/objects/CustomerMeetingReport__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <description>This comes under Meeting Detail section</description>
    <label>Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>