force-app/main/default/objects/CustomerMeetingReport__c/fields/Anticipated_Objections_Responses__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Objections_Responses__c</fullName>
    <label>Anticipated Objections &amp; Responses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>