force-app/main/default/objects/CustomerMeetingReport__c/fields/Assumed_Customer_Needs__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Customer_Needs__c</fullName>
    <label>Assumed Customer Needs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>