force-app/main/default/objects/CustomerMeetingReport__c/fields/Background_Info__c.field-meta.xml
<CustomField>
    <fullName>Background_Info__c</fullName>
    <label>Background Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>