force-app/main/default/objects/CustomerMeetingReport__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cargill Business Detail relationship.</description>
    <inlineHelpText>Cargill Business Detail relationship.</inlineHelpText>
    <label>Business</label>
    <referenceTo>BusinessDetail__c</referenceTo>
    <relationshipLabel>Customer Meeting Reports</relationshipLabel>
    <relationshipName>Customer_Meeting_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>