force-app/main/default/objects/CustomerMeetingReport__c/fields/Cargill_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Cargill_Attendees__c</fullName>
    <inlineHelpText>Add the Cargill Meeting participants after you save the report in the Cargill Attendee Details panel on the right of the Customer Meeting Report screen.</inlineHelpText>
    <label>Cargill Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>