force-app/main/default/objects/CustomerMeetingReport__c/fields/Cross_Functional_Meeting_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Cross_Functional_Meeting_Checklist__c</fullName>
    <formula>HYPERLINK(&quot;https://cargillprotein.lightning.force.com/lightning/r/ContentDocument/0691B000008qkMNQAY/view&quot;,&quot;Cross Functional Meeting Checklist&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Any meeting requiring individuals from multiple disciplines requires completion of the Cross Functional Meeting Checklist.  (Disciplines: plant persons, marketing, managers)</inlineHelpText>
    <label>Cross Functional Meeting Checklist</label>
    <type>Text</type>
</CustomField>