force-app/main/default/objects/CustomerMeetingReport__c/fields/Customer_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendees__c</fullName>
    <inlineHelpText>Add the Customer meeting participants after you save the report in the Customer Meeting Representatives panel on the right of the Customer Meeting Report screen.</inlineHelpText>
    <label>Customer Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>