force-app/main/default/objects/CustomerMeetingReport__c/fields/Features_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Features_Benefits__c</fullName>
    <label>Features / Benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>