force-app/main/default/objects/CustomerMeetingReport__c/fields/How_will_you_Open__c.field-meta.xml
<CustomField>
    <fullName>How_will_you_Open__c</fullName>
    <label>How will you Open</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>