force-app/main/default/objects/CustomerMeetingReport__c/fields/Important_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Important_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To mark meeting as Important.</description>
    <label>Important Meeting</label>
    <type>Checkbox</type>
</CustomField>