force-app/main/default/objects/CustomerMeetingReport__c/fields/Key_Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Key_Topics_Discussed__c</fullName>
    <description>Key Topics Discussed/Meeting Notes</description>
    <label>Key Topics Discussed/Meeting Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>