force-app/main/default/objects/CustomerMeetingReport__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_300))+  Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>