force-app/main/default/objects/CustomerMeetingReport__c/fields/Meeting_Logistics_Needs__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Logistics_Needs__c</fullName>
    <label>Meeting Logistics/Needs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>