force-app/main/default/objects/CustomerMeetingReport__c/fields/MeetingDate1__c.field-meta.xml
<CustomField>
    <fullName>MeetingDate1__c</fullName>
    <description>This is created for task 154, as we cannot use date field in field update of name</description>
    <formula>TEXT(MeetingDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MeetingDate</label>
    <type>Text</type>
</CustomField>