force-app/main/default/objects/CustomerMeetingReport__c/fields/MeetingDate__c.field-meta.xml
<CustomField>
    <fullName>MeetingDate__c</fullName>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>