force-app/main/default/objects/CustomerMeetingReport__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Next Steps</description>
    <label>Meeting Follow Ups</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>