force-app/main/default/objects/CustomerMeetingReport__c/fields/Other_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Other_Objectives__c</fullName>
    <label>Other Objectives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>