force-app/main/default/objects/CustomerMeetingReport__c/fields/OtherAttendees__c.field-meta.xml
<CustomField>
    <fullName>OtherAttendees__c</fullName>
    <label>Other Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>