force-app/main/default/objects/CustomerMeetingReport__c/fields/Plant_Visit_Request__c.field-meta.xml
<CustomField>
    <fullName>Plant_Visit_Request__c</fullName>
    <formula>HYPERLINK(&quot;http://xldomprd.Cargill.com/ProdManage/mocplanttour.nsf&quot;,&quot;Plant Visit Request Form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Visit Request</label>
    <type>Text</type>
</CustomField>