force-app/main/default/objects/CustomerMeetingReport__c/fields/Pricing_Information__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Information__c</fullName>
    <label>Pricing Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>