force-app/main/default/objects/CustomerMeetingReport__c/fields/Primary_Objective__c.field-meta.xml
<CustomField>
    <fullName>Primary_Objective__c</fullName>
    <description>This comes under Meeting Detail Section</description>
    <label>Primary Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>