force-app/main/default/objects/CustomerMeetingReport__c/fields/PrimaryAttendee__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAttendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Meeting Reports</relationshipLabel>
    <relationshipName>Customer_Meeting_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>