force-app/main/default/objects/CustomerMeetingReport__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Customer Meeting Reports</relationshipLabel>
    <relationshipName>Customer_Meeting_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>