force-app/main/default/objects/CustomerMeetingReport__c/fields/Questions_to_Ask__c.field-meta.xml
<CustomField>
    <fullName>Questions_to_Ask__c</fullName>
    <label>Questions to Ask</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>