force-app/main/default/objects/CustomerMeetingReport__c/fields/RecordNumber__c.field-meta.xml
<CustomField>
    <fullName>RecordNumber__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Record Number</label>
    <type>AutoNumber</type>
</CustomField>