force-app/main/default/objects/CustomerMeetingReport__c/fields/Related_Task_10__c.field-meta.xml
<CustomField>
    <fullName>Related_Task_10__c</fullName>
    <label>Related Task 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>