force-app/main/default/objects/CustomerMeetingReport__c/fields/Related_Task_1__c.field-meta.xml
<CustomField>
    <fullName>Related_Task_1__c</fullName>
    <label>Related Task 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>