force-app/main/default/objects/CustomerMeetingReport__c/fields/Related_Task_2__c.field-meta.xml
<CustomField>
    <fullName>Related_Task_2__c</fullName>
    <label>Related Task 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>