force-app/main/default/objects/CustomerMeetingReport__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>This comes under Meeting Detail section</description>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>