force-app/main/default/objects/CustomerMeetingReport__c/validationRules/Customer_Meeting_Date_Blank_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Meeting_Date_Blank_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR(ISPICKVAL(Status__c, &quot;Closed&quot;),
   ISPICKVAL(Status__c, &quot;Complete&quot;)
), 
ISNULL(MeetingDate__c) 
)</errorConditionFormula>
    <errorMessage>Meeting Date is required to advance Status to &quot;Complete&quot; or  &quot;Closed&quot;</errorMessage>
</ValidationRule>