force-app/main/default/objects/CustomerMeetingReport__c/validationRules/Descriptive_Name_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Descriptive_Name_cannot_be_blank</fullName>
    <active>false</active>
    <description>Descriptive_Name_cannot_be_blank</description>
    <errorConditionFormula>ISBLANK( Descriptive_Name__c )</errorConditionFormula>
    <errorMessage>Descriptive Name cannot be blank.</errorMessage>
</ValidationRule>